--- a/src/Components/page-3.css
+++ b/src/Components/page-3.css
@@ -172,8 +172,6 @@ p.innerpara {
     margin-left: -39%;
   }
 
-  element.style {
-  }
   .text-center {
     text-align: center !important;
   }
